checkpoint--cleanup, font fixes for readability on various devices, add modifications to the slide carousel scss file

--- a/resources/assets/sass/_custom.scss
+++ b/resources/assets/sass/_custom.scss
@@ -15,7 +15,7 @@
 }
 
 .carousel-inner > .item > img,
- .carousel-inner > .carousel-item > a > img {
+ .carousel-inner > .carousel-item > img {
      display: block;
      margin: auto;
      width: auto !important;
